--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -421,7 +421,8 @@ $gl-icon-sizes: 8 12 14 16 24 32 48 72;
 $gl-dropdown-width: px-to-rem(240px);
 $gl-dropdown-width-narrow: px-to-rem(160px);
 $gl-dropdown-width-wide: px-to-rem(400px);
-$gl-max-dropdown-max-height: px-to-rem(312px);
+$gl-max-dropdown-max-height-px: 312px;
+$gl-max-dropdown-max-height: px-to-rem($gl-max-dropdown-max-height-px);
 
 // Broadcast messages
 $gl-broadcast-message-text-max-width: px-to-rem(934px);
